--- a/wiffle/_wiffle-core.css
+++ b/wiffle/_wiffle-core.css
@@ -7,7 +7,7 @@
 **
 ** "Moblie"
 ** [A]LPHA
-** (viewport < 665):
+** (viewport < 665px):
 **
 **--------------------------------------------------------------------------
 */
@@ -25,7 +25,7 @@
 ** "Tablet"
 ** [B]RAVO
 ** Breakpoint #1
-** (viewport >= 665) & (viewport < 1005):
+** (viewport >= 665px) & (viewport < 1005px):
 **
 **--------------------------------------------------------------------------
 */
@@ -46,7 +46,7 @@
 ** "Desktop"
 ** [C]HARLIE
 ** Breakpoint #2
-** (viewport >= 1005) & (viewport < 1345):
+** (viewport >= 1005px) & (viewport < 1345px):
 **
 **--------------------------------------------------------------------------
 */
@@ -67,7 +67,7 @@
 ** "Big desktop"
 ** [D]ELTA
 ** Breakpoint #3
-** (viewport >= 1345):
+** (viewport >= 1345px):
 **
 **--------------------------------------------------------------------------
 */
