--- a/wiffle/wiffle-2.1.0.css
+++ b/wiffle/wiffle-2.1.0.css
@@ -28,9 +28,9 @@
 /*
 **--------------------------------------------------------------------------
 **
-** "Moblie"
+** Moblie
 ** [A]LPHA
-** (viewport < 665px):
+** `viewport < 665px`
 **
 **--------------------------------------------------------------------------
 */
@@ -45,10 +45,10 @@
 /*
 **--------------------------------------------------------------------------
 **
-** "Tablet"
+** Tablet
 ** [B]RAVO
 ** Breakpoint #1
-** (viewport >= 665px) & (viewport < 1005px):
+** `(viewport >= 665px)` & `(viewport < 1005px)`
 **
 **--------------------------------------------------------------------------
 */
@@ -66,10 +66,10 @@
 /*
 **--------------------------------------------------------------------------
 **
-** "Desktop"
+** Desktop
 ** [C]HARLIE
 ** Breakpoint #2
-** (viewport >= 1005px) & (viewport < 1345px):
+** `(viewport >= 1005px)` & `(viewport < 1345px)`
 **
 **--------------------------------------------------------------------------
 */
@@ -87,10 +87,10 @@
 /*
 **--------------------------------------------------------------------------
 **
-** "Big desktop"
+** Big Desktop
 ** [D]ELTA
 ** Breakpoint #3
-** (viewport >= 1345px):
+** `viewport >= 1345px`
 **
 **--------------------------------------------------------------------------
 */
