--- a/wiffle/_wiffle-core.css
+++ b/wiffle/_wiffle-core.css
@@ -5,9 +5,9 @@
 /*
 **--------------------------------------------------------------------------
 **
-** "Moblie"
+** Moblie
 ** [A]LPHA
-** (viewport < 665px):
+** `viewport < 665px`
 **
 **--------------------------------------------------------------------------
 */
@@ -22,10 +22,10 @@
 /*
 **--------------------------------------------------------------------------
 **
-** "Tablet"
+** Tablet
 ** [B]RAVO
 ** Breakpoint #1
-** (viewport >= 665px) & (viewport < 1005px):
+** `(viewport >= 665px)` & `(viewport < 1005px)`
 **
 **--------------------------------------------------------------------------
 */
@@ -43,10 +43,10 @@
 /*
 **--------------------------------------------------------------------------
 **
-** "Desktop"
+** Desktop
 ** [C]HARLIE
 ** Breakpoint #2
-** (viewport >= 1005px) & (viewport < 1345px):
+** `(viewport >= 1005px)` & `(viewport < 1345px)`
 **
 **--------------------------------------------------------------------------
 */
@@ -64,10 +64,10 @@
 /*
 **--------------------------------------------------------------------------
 **
-** "Big desktop"
+** Big Desktop
 ** [D]ELTA
 ** Breakpoint #3
-** (viewport >= 1345px):
+** `viewport >= 1345px`
 **
 **--------------------------------------------------------------------------
 */
