Staging the v2.2.0 release.

--- a/wiffle/_wiffle-pct.css
+++ b/wiffle/_wiffle-pct.css
@@ -2,7 +2,7 @@
    _wiffle-pct.css
    ========================================================================== */
 
-/*-----------------( [A]lpha )-----------------*/
+/*-----------------( [ A ]LPHA )-----------------*/
 
 /**
  * `%` grid base structure.
@@ -66,7 +66,7 @@
 
 @media only screen and (min-width: 665px) {
 	
-	/*-----------------( [B]ravo )-----------------*/
+	/*-----------------( [ B ]RAVO )-----------------*/
 	
 	/**
 	 * `%` classes.
@@ -120,7 +120,7 @@
 
 @media only screen and (min-width: 1005px) {
 	
-	/*-----------------( [C]harlie )-----------------*/
+	/*-----------------( [ C ]HARLIE )-----------------*/
 	
 	/**
 	 * `%` classes.
@@ -174,7 +174,7 @@
 
 @media only screen and (min-width: 1345px) {
 	
-	/*-----------------( [D]elta )-----------------*/
+	/*-----------------( [ D ]ELTA )-----------------*/
 	
 	/**
 	 * `%` classes.
