--- a/wiffle/wiffle-2.2.0.css
+++ b/wiffle/wiffle-2.2.0.css
@@ -29,7 +29,7 @@
 **--------------------------------------------------------------------------
 **
 ** Moblie
-** [A]LPHA
+** [ A ]LPHA
 ** `viewport < 665px`
 **
 **--------------------------------------------------------------------------
@@ -46,7 +46,7 @@
 **--------------------------------------------------------------------------
 **
 ** Tablet
-** [B]RAVO
+** [ B ]RAVO
 ** Breakpoint #1
 ** `(viewport >= 665px)` & `(viewport < 1005px)`
 **
@@ -67,7 +67,7 @@
 **--------------------------------------------------------------------------
 **
 ** Desktop
-** [C]HARLIE
+** [ C ]HARLIE
 ** Breakpoint #2
 ** `(viewport >= 1005px)` & `(viewport < 1345px)`
 **
@@ -88,7 +88,7 @@
 **--------------------------------------------------------------------------
 **
 ** Big Desktop
-** [D]ELTA
+** [ D ]ELTA
 ** Breakpoint #3
 ** `viewport >= 1345px`
 **
@@ -109,7 +109,7 @@
    _wiffle-px.css
    ========================================================================== */
 
-/*-----------------( [A]lpha )-----------------*/
+/*-----------------( [ A ]LPHA )-----------------*/
 
 /**
  * Left `px` grid base structure.
@@ -121,17 +121,9 @@
 	.w_col { padding: 1px 0; margin: -1px 0; position: relative; } /* rgne.ws/JAoGck */
 		.debug .w_col { background: rgba(0, 0, 255, 0.25); } /* blue, #00f */
 
-/**
- * Right `px` grid base structure.
- */
-
-.w_row-r:before, .w_row-r:after { content: ""; display: table; } .w_row-r:after { clear: both; } .w_row-r { *zoom: 1; }
-	.w_col-r { padding: 1px 0; margin: -1px 0; position: relative; }
-		.debug .w_col-r { background: rgba(0, 0, 255, 0.25); } /* blue, #00f */
-
 @media only screen and (min-width: 665px) {
 	
-	/*-----------------( [B]ravo )-----------------*/
+	/*-----------------( [ B ]RAVO )-----------------*/
 	
 	/**
 	 * Left `px` rows/cols.
@@ -141,15 +133,6 @@
 	
 	.w_row { margin-left: -40px; }
 		.w_col { padding-left: 40px; } /* Account for negative margin above. */
-	
-	/*----------------------------------*/
-	
-	/**
-	 * Right `px` rows/cols.
-	 */
-	
-	.w_row-r { margin-right: -40px; }
-		.w_col-r { padding-right: 40px; } /* IBID */
 	
 	/*----------------------------------*/
 	
@@ -167,25 +150,11 @@
 		.debug .w_B470 { background: rgba(0, 128, 128, 0.25); } /* teal, #008080 */
 	.w_B130, .w_B300, .w_B470 { margin: 0 0 0 40px; padding: 0; float: left; display: inline; } /* Remove padding in place of margin (see link above). */
 	
-	/*----------------------------------*/
-	
-	/**
-	 * Right `px` classes.
-	 */
-	
-	.w_B130-r { width: 130px; }
-	.w_B300-r { width: 300px; }
-	.w_B470-r { width: 470px; }
-		.debug .w_B130-r { background: rgba(128, 0, 128, 0.25); } /* purple, #800080 */
-		.debug .w_B300-r { background: rgba(0, 0, 128, 0.25); }   /* navy, #000080 */
-		.debug .w_B470-r { background: rgba(0, 128, 128, 0.25); } /* teal, #008080 */
-	.w_B130-r, .w_B300-r, .w_B470-r { margin: 0 40px 0 0; padding: 0; float: right; display: inline; } /* IBID */
-	
 }
 
 @media only screen and (min-width: 1005px) {
 	
-	/*-----------------( [C]harlie )-----------------*/
+	/*-----------------( [ C ]HARLIE )-----------------*/
 	
 	/**
 	 * Left `px` classes.
@@ -203,29 +172,11 @@
 		.debug .w_C810 { background: rgba(240, 230, 140, 0.25); } /* khaki, #f0e68c */
 	.w_C130, .w_C300, .w_C470, .w_C640, .w_C810 { margin: 0 0 0 40px; padding: 0; float: left; display: inline; }
 	
-	/*----------------------------------*/
-	
-	/**
-	 * Right `px` classes.
-	 */
-	
-	.w_C130-r { width: 130px; }
-	.w_C300-r { width: 300px; }
-	.w_C470-r { width: 470px; }
-	.w_C640-r { width: 640px; }
-	.w_C810-r { width: 810px; }
-		.debug .w_C130-r { background: rgba(192, 192, 192, 0.25); } /* silver, #c0c0c0 */
-		.debug .w_C300-r { background: rgba(0, 128, 0, 0.25); }     /* green, #008000 */
-		.debug .w_C470-r { background: rgba(0, 255, 0, 0.25); }     /* lime, #0f0 */
-		.debug .w_C640-r { background: rgba(255, 255, 255, 0.25); } /* white, #fff */
-		.debug .w_C810-r { background: rgba(240, 230, 140, 0.25); } /* khaki, #f0e68c */
-	.w_C130-r, .w_C300-r, .w_C470-r, .w_C640-r, .w_C810-r { margin: 0 40px 0 0; padding: 0; float: right; display: inline; }
-	
 }
 
 @media only screen and (min-width: 1345px) {
 	
-	/*-----------------( [D]elta )-----------------*/
+	/*-----------------( [ D ]ELTA )-----------------*/
 	
 	/**
 	 * Left `px` classes.
@@ -247,35 +198,13 @@
 		.debug .w_D1150 { background: rgba(64, 224, 208, 0.25); } /* turquoise, #40e0d0 */
 	.w_D130, .w_D300, .w_D470, .w_D640, .w_D810, .w_D980, .w_D1150 { margin: 0 0 0 40px; padding: 0; float: left; display: inline; }
 	
-	/*----------------------------------*/
-	
-	/**
-	 * Right `px` classes.
-	 */
-	
-	.w_D130-r { width: 130px; }
-	.w_D300-r { width: 300px; }
-	.w_D470-r { width: 470px; }
-	.w_D640-r { width: 640px; }
-	.w_D810-r { width: 810px; }
-	.w_D980-r { width: 980px; }
-	.w_D1150-r { width: 1150px; }
-		.debug .w_D130-r { background: rgba(128, 128, 128, 0.25); } /* gray, #808080 */
-		.debug .w_D300-r { background: rgba(128, 128, 0, 0.25); }   /* olive, #808000 */
-		.debug .w_D470-r { background: rgba(255, 255, 0, 0.25); }   /* yellow, #ff0 */
-		.debug .w_D640-r { background: rgba(255, 0, 0, 0.25); }     /* red, #f00 */
-		.debug .w_D810-r { background: rgba(255, 0, 255, 0.25); }   /* fuchsia, #f0f */
-		.debug .w_D980-r { background: rgba(128, 0, 0, 0.25); }     /* maroon, #800000 */
-		.debug .w_D1150-r { background: rgba(64, 224, 208, 0.25); } /* turquoise, #40e0d0 */
-	.w_D130-r, .w_D300-r, .w_D470-r, .w_D640-r, .w_D810-r, .w_D980-r, .w_D1150-r { margin: 0 40px 0 0; padding: 0; float: right; display: inline; }
-	
 }
 
 /* ==========================================================================
    _wiffle-pct.css
    ========================================================================== */
 
-/*-----------------( [A]lpha )-----------------*/
+/*-----------------( [ A ]LPHA )-----------------*/
 
 /**
  * `%` grid base structure.
@@ -339,7 +268,7 @@
 
 @media only screen and (min-width: 665px) {
 	
-	/*-----------------( [B]ravo )-----------------*/
+	/*-----------------( [ B ]RAVO )-----------------*/
 	
 	/**
 	 * `%` classes.
@@ -393,7 +322,7 @@
 
 @media only screen and (min-width: 1005px) {
 	
-	/*-----------------( [C]harlie )-----------------*/
+	/*-----------------( [ C ]HARLIE )-----------------*/
 	
 	/**
 	 * `%` classes.
@@ -447,7 +376,7 @@
 
 @media only screen and (min-width: 1345px) {
 	
-	/*-----------------( [D]elta )-----------------*/
+	/*-----------------( [ D ]ELTA )-----------------*/
 	
 	/**
 	 * `%` classes.
@@ -505,14 +434,22 @@
 
 @media only screen and (min-width: 665px) {
 	
-	/*-----------------( [B]ravo )-----------------*/
+	/*-----------------( [ B ]RAVO )-----------------*/
 	
 	/**
-	 * Clear preceding columns.
+	 * Right `px` cols.
+	 * Compatible with IE > 6.
 	 */
 	
-	.w_Bcl { clear: left; }
-	.w_Bcr { clear: right; }
+	.w_row.w_Bfr > .w_col { float: right; }
+	
+	/*----------------------------------*/
+	
+	/**
+	 * Clear preceding/succeeding columns.
+	 */
+	
+	.w_Bcl { clear: left; } .w_Bcr { clear: right; }
 	
 	/*----------------------------------*/
 	
@@ -523,36 +460,28 @@
 	 * @see rgne.ws/M85ynR
 	 */
 	
-	/* Initialize: */
-	
-	.w_lb:before, .w_la:after {
-		border-right: 1px solid #ccc;
-		content: "";
-		display: none;
-		position: absolute;
-		top: 0;
-		bottom: 0;
-	}
-	.w_lb:before { left: -21px; }
-	.w_la:after { right: -20px; }
-	
-	/* Breakpoints: */
-	
+	.w_lb:before, .w_la:after { border-right: 1px solid #ccc; content: ""; display: none; position: absolute; top: 0; bottom: 0; } .w_lb:before { left: -21px; } .w_la:after { right: -20px; }
 	.w_Bl:before, .w_Bl:after { display: block; }
 	
 }
 
 @media only screen and (min-width: 1005px) {
 	
-	/*-----------------( [C]harlie )-----------------*/
+	/*-----------------( [ C ]HARLIE )-----------------*/
 	
 	/**
-	 * Clear preceding columns.
+	 * Right `px` cols.
 	 */
 	
-	.w_Bcl, .w_Bcr { clear: none; }
-	.w_Ccl { clear: left; }
-	.w_Ccr { clear: right; }
+	.w_row.w_Cfr > .w_col { float: right; }
+	
+	/*----------------------------------*/
+	
+	/**
+	 * Clear preceding/succeeding columns.
+	 */
+	
+	.w_Bcl, .w_Bcr { clear: none; } .w_Ccl { clear: left; } .w_Ccr { clear: right; }
 	
 	/*----------------------------------*/
 	
@@ -566,13 +495,21 @@
 
 @media only screen and (min-width: 1345px) {
 	
+	/*-----------------( [ D ]ELTA )-----------------*/
+	
 	/**
-	 * Clear preceding columns.
+	 * Right `px` cols.
 	 */
 	
-	.w_Ccl, .w_Ccr { clear: none; }
-	.w_Dcl { clear: left; }
-	.w_Dcr { clear: right; }
+	.w_row.w_Dfr > .w_col { float: right; }
+	
+	/*----------------------------------*/
+	
+	/**
+	 * Clear preceding/succeeding columns.
+	 */
+	
+	.w_Ccl, .w_Ccr { clear: none; } .w_Dcl { clear: left; } .w_Dcr { clear: right; }
 	
 	/*----------------------------------*/
 	
